--- a/RPChecker/Properties/Resources.resx
+++ b/RPChecker/Properties/Resources.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
-    Microsoft ResX Schema 
-    
+  <!--
+    Microsoft ResX Schema
+
     Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
     associated with the data types.
-    
+
     Example:
-    
+
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-                
-    There are any number of "resheader" rows that contain simple 
+
+    There are any number of "resheader" rows that contain simple
     name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
     mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
     extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
     read any of the formats listed below.
-    
+
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
+    value   : The object must be serialized into a byte array
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -131,21 +131,25 @@ import mvsfunc as mvf
 import functools
 
 core=vs.get_core(accept_lowercase=True)
-core.max_cache_size = 5000
+core.max_cache_size=5000
 
-src=core.lsmas.LWLibavSource(r"%File1%",format="yuv420p16")
-opt=core.lsmas.LWLibavSource(r"%File2%",format="yuv420p16")
+srcPath=r"%File1%"
+optPath=r"%File2%"
+fmt="yuv420p16"
 
-if src.width!=opt.width:
-    src=src.resize.Bicubic(width=opt.width,height=opt.height,format=vs.YUV420P16)
+source=lambda path:core.lsmas.LibavSMASHSource(path,format=fmt) if path.lower().endswith("mp4") else core.lsmas.LWLibavSource(path,format=fmt)
 
-cmp=mvf.PlaneCompare(opt,src,mae=False,rmse=False,cov=False,corr=False)
+src=mvf.GetPlane(source(srcPath))
+opt=mvf.GetPlane(source(optPath))
+
+if src.width!=opt.width:src=src.resize.Bicubic(width=opt.width,height=opt.height,format=vs.GRAY16)
 
 def callback(n,clip,f):
    print(n,f.props.PlanePSNR,flush=True)
    return clip
 
-cmp=core.std.FrameEval(cmp,functools.partial(callback, clip=cmp),prop_src=[cmp])
+cmp=mvf.PlaneCompare(opt,src,mae=False,rmse=False,cov=False,corr=False)
+cmp=core.std.FrameEval(cmp,functools.partial(callback,clip=cmp),prop_src=[cmp])
 cmp.set_output()
 </value>
     <comment>默认的vpy模板</comment>
