--- a/RPChecker/Properties/Resources.resx
+++ b/RPChecker/Properties/Resources.resx
@@ -123,70 +123,76 @@
   </data>
   <data name="Default" xml:space="preserve">
     <value>import vapoursynth as vs
-import functools
+import sys
 from vapoursynth import core
 
-srcpath = R"%File1%"
-rippath = R"%File2%"
+# Load source &amp; ripped files.
+srcpath = r"%File1%"
+rippath = r"%File2%"
 src = core.lsmas.LWLibavSource(srcpath)
 rip = core.lsmas.LWLibavSource(rippath)
+assert rip.format.color_family in [vs.YUV, vs.GRAY], "only support YUV or Gray input"
 
-if rip.format.subsampling_h == 1 and rip.format.subsampling_w == 1:
-    format = vs.YUV420P8
-elif rip.format.subsampling_h == 0 and rip.format.subsampling_w == 0:
-    format = vs.YUV444P8
-else:
-    assert False, "Only Support YUV420 and YUV444 format!"
-    
-if not (rip.format.bits_per_sample == 8): rip = rip.resize.Spline64(format=format, dither_type='none')
-if not (src.format.bits_per_sample == 8): src = src.resize.Spline64(format=format, dither_type='none')
+def force8bit(clip):
+    if clip.format.bits_per_sample == 8:
+        return clip
+    return clip.resize.Spline64(format=clip.format.replace(bits_per_sample=8).id, dither_type='none')
+src = force8bit(src)
+rip = force8bit(rip)
 
+# Get the clips in same dimention.
 if src.width != rip.width or src.height != rip.height:
-    src = src.resize.Spline36(rip.width, rip.height)
+    src = src.resize.Bicubic(rip.width, rip.height)
 
-srcy, srcu, srcv = src.std.SplitPlanes()
-ripy, ripu, ripv = rip.std.SplitPlanes()
+src_planes = [ src.std.ShufflePlanes(i, vs.GRAY) for i in range(src.format.num_planes) ]
+rip_planes = [ rip.std.ShufflePlanes(i, vs.GRAY) for i in range(rip.format.num_planes) ]
 
 # runtime function to print psnr value to console.
-def callback(n, f, clip):
-    print(f"RPCOUT: {n} {f[0].props.PlanePSNR} {f[1].props.PlanePSNR} {f[2].props.PlanePSNR}", flush=True)
-    return clip
+def callback(n, f):
+    print("RPCOUT:", n, ' '.join([ str(p.props.PlanePSNR) for p in f ]), flush=True, file=sys.stdout)
+    return rip
 
-cmpy = core.complane.PSNR(ripy, srcy)
-cmpu = core.complane.PSNR(ripu, srcu)
-cmpv = core.complane.PSNR(ripv, srcv)
-
-cmp = core.std.FrameEval(rip,functools.partial(callback, clip=rip), prop_src=[cmpy, cmpu, cmpv], clip_src=[cmpy, cmpu, cmpv])
+# Compare.
+cmp_planes = [ core.complane.PSNR(a, b) for (a, b) in zip(rip_planes, src_planes) ]
+cmp = core.std.FrameEval(rip, callback, prop_src=cmp_planes)
 cmp.set_output()</value>
     <comment>计算PSNR的vpy模板</comment>
   </data>
   <data name="GMSD" xml:space="preserve">
     <value>import vapoursynth as vs
-import mvsfunc as mvf
+import sys
+from vapoursynth import core
 import muvsfunc as muf
-import functools
 
-core=vs.get_core()
-core.max_cache_size=5000
+# Load source &amp; ripped files.
+srcpath = r"%File1%"
+rippath = r"%File2%"
+src = core.lsmas.LWLibavSource(srcpath)
+rip = core.lsmas.LWLibavSource(rippath)
+assert rip.format.color_family in [vs.YUV, vs.GRAY], "only support YUV or Gray input"
 
-src=r"%File1%"
-opt=r"%File2%"
-fmt="yuv420p16"
+def force8bit(clip):
+    if clip.format.bits_per_sample == 8:
+        return clip
+    return clip.resize.Spline64(format=clip.format.replace(bits_per_sample=8).id, dither_type='none')
+src = force8bit(src)
+rip = force8bit(rip)
 
-source=lambda path:core.lsmas.LibavSMASHSource(path,format=fmt)if path.lower().endswith("mp4")else core.lsmas.LWLibavSource(path,format=fmt)
+# Get the clips in same dimention.
+if src.width != rip.width or src.height != rip.height:
+    src = src.resize.Bicubic(rip.width, rip.height)
 
-src=mvf.GetPlane(source(src))
-opt=mvf.GetPlane(source(opt))
+src_planes = [ src.std.ShufflePlanes(i, vs.GRAY) for i in range(src.format.num_planes) ]
+rip_planes = [ rip.std.ShufflePlanes(i, vs.GRAY) for i in range(rip.format.num_planes) ]
 
-if src.width!=opt.width:src=src.resize.Bicubic(width=opt.width,height=opt.height,format=vs.GRAY16)
+# runtime function to print gmsd value to console.
+def callback(n, f):
+    print("RPCOUT:", n, ' '.join([ str((1-min(1,float(p.props.PlaneGMSD)))*100) for p in f ]), flush=True, file=sys.stdout)
+    return rip
 
-def callback(n,f,clip):
-  print(n,(1-min(1,float(f.props.PlaneGMSD)))*100,flush=True)
-  #clip=core.text.Text(clip,str(n)+" "+str(f.props.PlaneGMSD))
-  return clip
-
-cmp=muf.GMSD(opt,src)
-cmp=core.std.FrameEval(cmp,functools.partial(callback,clip=cmp),prop_src=[cmp])
+# Compare.
+cmp_planes = [ muf.GMSD(a,b) for (a, b) in zip(rip_planes, src_planes) ]
+cmp=core.std.FrameEval(rip, callback, prop_src=cmp_planes)
 cmp.set_output()</value>
     <comment>计算GMSD的vpy模板</comment>
   </data>
